--- a/Recipes.html
+++ b/Recipes.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-	<title>Recipes</title>
+  <title>Recipies</title>
 </head>
 <body>
-		<h1><img src="images/logo.gif" alt="From A to Zucchini" /></h1>
+<h1><img src="images/logo.gif" alt="From A to Zucchini" /></h1>
 		<figure>
 			<img src="images/chocolate-islands.jpg" alt="Chocolate Islands" title="Individual Chocolate Cakes" />
 			<p>
@@ -21,5 +21,5 @@
 			<img src="images/roasted-brussel-sprouts.jpg" alt="Roasted Brussel Sprouts" title="Roasted Brussel Sprouts" />
 			<img src="images/zucchini-cake.jpg" alt="Zucchini Cake" title="Zucchini Cake" />
 		</p>
-	</body>
+</body>
 </html>
