--- a/artifact01/recipes.html
+++ b/artifact01/recipes.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1><img src="images/logo.gif" alt="From A to Zucchini" /></h1>
 		<figure>
-			<img src=""C:\Users\aiden\Downloads\Untitled.png"" title="Individual Chocolate Cakes" />
+			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict" title="Individual Chocolate Cakes" />
 			<p>
 				<figcaption>
 					This recipe for individual chocolate cakes is so simple and so delectable!
