--- a/artifact01/recipes.html
+++ b/artifact01/recipes.html
@@ -1,12 +1,14 @@
-<!DOCTYPE! html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Images</title>
-	</head>
-	<body>
-		<h1><img src="images/logo.gif" alt="From A to Zucchini" /></h1>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Recipies</title>
+</head>
+<body>
+<h1><img src="images/logo.gif" alt="From A to Zucchini" /></h1>
 		<figure>
-			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict" title="Individual Chocolate Cakes" />
+			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict alt="Chocolate Islands" title="Individual Chocolate Cakes" />
 			<p>
 				<figcaption>
 					This recipe for individual chocolate cakes is so simple and so delectable!
@@ -19,5 +21,5 @@
 			<img src="images/roasted-brussel-sprouts.jpg" alt="Roasted Brussel Sprouts" title="Roasted Brussel Sprouts" />
 			<img src="images/zucchini-cake.jpg" alt="Zucchini Cake" title="Zucchini Cake" />
 		</p>
-	</body>
+</body>
 </html>
