--- a/artifact01/recipes.html
+++ b/artifact01/recipes.html
@@ -6,7 +6,7 @@
   <title>Recipes</title>
 </head>
 <body>
-<h1><img src="null" alt="Recipes" /></h1>
+<h1> "Recipes" /></h1>
 		<figure>
 			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict alt="Chocolate Islands" title="Individual Chocolate Cakes" />
 			<p>
