--- a/artifact01/recipes.html
+++ b/artifact01/recipes.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Recipes</h1>
 		<figure>
-			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict alt="Chocolate Islands" title="Individual Chocolate Cakes" />
+			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict alt="Chocalate Chip cookies" title="Individual Chocolate Chip Cookies" />
 			<p>
 				<figcaption>
 					This recipe for individual chocolate chip cookies is so simple and so delectable!
