--- a/artifact01/index.html
+++ b/artifact01/index.html
@@ -15,7 +15,7 @@
         <p>Mobile: +555 666 777</p>
         <p>Date of Birth: 1 April 1980</p>
         <p>Nationality: Brazilian</p>
-        <img src="https://th.bing.com/th/id/R.6d6b2f4f77173ce6c56f696e41b26c02?rik=oypsz%2fE6YcZ%2bsg&riu=http%3a%2f%2fwww.clker.com%2fcliparts%2f1%2fU%2fB%2f5%2fN%2fe%2fbrazil-hi.png&ehk=Sfy7V67%2bbl8zagqx4NLMbgAVyqILxPXZdYKppJuiG5k%3d&risl=&pid=ImgRaw&r=0&adlt=strict" alt=Outlinne-of-the-country-Brazil>
+        <img src="https://th.bing.com/th/id/R.6d6b2f4f77173ce6c56f696e41b26c02?rik=oypsz%2fE6YcZ%2bsg&riu=http%3a%2f%2fwww.clker.com%2fcliparts%2f1%2fU%2fB%2f5%2fN%2fe%2fbrazil-hi.png&ehk=Sfy7V67%2bbl8zagqx4NLMbgAVyqILxPXZdYKppJuiG5k%3d&risl=&pid=ImgRaw&r=0&adlt=strict" alt="Outline of the country Brazil">
     </div>
 
     <div class="section">
