--- a/m02/index.html
+++ b/m02/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 
-<table border="1" cellspacing="0" cellpadding="8" width="100%">
+<table border="1">
     <tr>
         <td colspan="4" align="center"><h1>HTML Table Example</h1></td>
     </tr>
     <tr>
         <td rowspan="4"><img src="your_image_url.jpg" alt="Alternative Text"></td>
-        <td colspan="3"><h2>Column 1</h2></td>
+        <td colspan="1" rowspan="4"><h2>Column 1</h2></td>
     </tr>
     <tr>
-        <td><h2>Column 2</h2></td>
+        <td colspan="1" rowspan="4"><h2>Column 2</h2></td>
         <td><h2>Column 3</h2></td>
     </tr>
     <tr>
