--- a/m02/index.html
+++ b/m02/index.html
@@ -9,29 +9,17 @@
 
 <table border="1">
     <tr>
-        <td colspan="4" align="center"><h1>HTML Table Example</h1></td>
+        <td colspan="6" align="center"><h1>HTML Table Example</h1></td>
     </tr>
     <tr>
-        <td rowspan="4"><img src="your_image_url.jpg" alt="Alternative Text"></td>
+        <td colspan="3" rowspan="4"><img src="your_image_url.jpg" alt="Alternative Text"></td>
         <td colspan="1" rowspan="4"><h2>Column 1</h2></td>
     </tr>
     <tr>
         <td colspan="1" rowspan="4"><h2>Column 2</h2></td>
-        <td><h2>Column 3</h2></td>
-    </tr>
-    <tr>
-        <th>Header 1</th>
-        <th>Header 2</th>
-        <th>Header 3</th>
-    </tr>
-    <tr>
-        <td><b>Row 1</b></td>
-        <td colspan="2"><b>Row 2 (Merged)</b></td>
-    </tr>
-    <tr>
-        <td colspan="4"><b>Instructions (Merged)</b></td>
+        <td colspan="3" rowspan="4"><h2>Column 3</h2></td>
     </tr>
 </table>
-
 </body>
 </html>
+
