--- a/m02/index.html
+++ b/m02/index.html
@@ -7,19 +7,60 @@
 </head>
 <body>
 
-<table border="1">
+<table border="1" width="100%">
     <tr>
-        <td colspan="6" align="center"><h1>HTML Table Example</h1></td>
+        <td colspan="7" align="center"><h1>HTML Table Example</h1></td>
     </tr>
     <tr>
-        <td colspan="3" rowspan="4"><img src="your_image_url.jpg" alt="Alternative Text"></td>
-        <td colspan="1" rowspan="4"><h2>Column 1</h2></td>
+        <td align="center" colspan="3"><img src="https://i.pinimg.com/originals/ec/17/f8/ec17f82d1fe7562ad944f471c6f06773.png" width=300px height=auto></td>
+      <td align="center"><h2>Meal<br>Planner</br></h2></td>
+        <td colspan="3" align="center"><h2>Recipe Index #:</h2></td>
     </tr>
     <tr>
-        <td colspan="1" rowspan="4"><h2>Column 2</h2></td>
-        <td colspan="3" rowspan="4"><h2>Column 3</h2></td>
+        <th colspan="3">Week Starting</th>
+        <th>2/15/2018</th>
+        <th colspan="3">Instructions</th>
     </tr>
+    <tr>
+      <td colspan="3"><b>Day of the Week</b></td>
+        <td><b>Recipe name</b></td>
+        <td colspan="3" rowspan="8"></td>
+    </tr>
+   <tr>
+        <td colspan="3">Monday</td>
+        <td>Spinach Feta Pizza</td>
+   </tr>
+   <tr>
+        <td colspan="3">Tuesday</td>
+        <td>My new recipe</td>
+   </tr> 
+<tr>
+        <td colspan="3">Wednesday</td>
+        <td>Toast</td>
+   </tr> 
+<tr>
+        <td colspan="3">Thursday</td>
+        <td>Spaghetti</td>
+   </tr> 
+<tr>
+        <td colspan="3">Fiday</td>
+        <td>Omlets</td>
+   </tr> 
+<tr>
+        <td colspan="3">Saturday</td>
+        <td>Pancakes</td>
+   </tr>
+   <tr>
+        <td colspan="3">Sunday</td>
+        <td>Cereal</td>
+   </tr>
+  
+  
+  
+  
 </table>
+
 </body>
 </html>
+
 
