--- a/m02/index.html
+++ b/m02/index.html
@@ -12,8 +12,8 @@
         <td colspan="7" align="center"><h1>HTML Table Example</h1></td>
     </tr>
     <tr>
-        <td align="center" colspan="3"><img src="https://i.pinimg.com/originals/ec/17/f8/ec17f82d1fe7562ad944f471c6f06773.png" alt="woman cooking in a kitchen" width=300px height=auto></td>
-      <td align="center"><h2>Meal<br>Planner</br></h2></td>
+        <td align="center" colspan="3"><img src="https://i.pinimg.com/originals/ec/17/f8/ec17f82d1fe7562ad944f471c6f06773.png" alt="woman cooking in a kitchen" width=300></td>
+      <td align="center"><h2>Meal<br>Planner</h2></td>
         <td colspan="3" align="center"><h2>Recipe Index #:</h2></td>
     </tr>
     <tr>
