--- a/m02/index.html
+++ b/m02/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<table border="1" width="100%">
+<table border="1" width="65">
     <tr>
         <td colspan="7" align="center"><h1>HTML Table Example</h1></td>
     </tr>
