--- a/artifact01/index.html
+++ b/artifact01/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
+    <hr>
 
     <div class="section">
         <h2>PERSONAL DETAILS</h2>
@@ -27,21 +28,21 @@
     <div class="section">
         <h2>EDUCATION HISTORY</h2>
         <div class="sub-section">
-            <h3>May 2006 – Current</h3>
-            <p>University of Sao Paulo, Sao Paulo BRAZIL</p>
-            <p>"http://www.fe.usp.br"</p>
+            <strong>May 2006 – Current</strong>
+            <p><i>University of Sao Paulo, Sao Paulo BRAZIL</i></p>
+            <a href=http://www.fe.usp.br>
             <p>Masters in International Marketing</p>
             <p>Expected graduation: Oct 2007</p>
         </div>
         <div class="sub-section">
-            <h3>Jan 2002 – Nov 2005</h3>
-            <p>University of Sao Paulo, Sao Paulo BRAZIL</p>
+            <strong>Jan 2002 – Nov 2005</strong>
+            <p><i>University of Sao Paulo, Sao Paulo BRAZIL</i></p>
             <p>Bachelor of Business in Sports Management</p>
         </div>
     </div>
         <div class="sub-section">
-            <h3>May 1999 – Feb 2001</h3>
-            <p>Augusto Laranja High School, Sao Paulo BRAZIL</p>
+            <strong>May 1999 – Feb 2001</strong>
+            <p><i>Augusto Laranja High School, Sao Paulo BRAZIL</i></p>
             <p>High School Certificate equivalent</p>
         </div>
     
@@ -49,7 +50,7 @@
         <h2>WORK EXPERIENCE</h2>
         <div class="sub-section">
             <h3>Jan 2006 – Current</h3>
-            <p>MOEMA MARKETING, Sao Paulo BRAZIL</p>
+            <p><i>MOEMA MARKETING, Sao Paulo BRAZIL</i></p>
             <p><a href="http://www.moemamkt.com.br">http://www.moemamkt.com.br</a></p>
             <p>Marketing Trainee – Casual (weekends and holidays)</p>
             <p>Responsibilities and achievements:</p>
@@ -123,6 +124,7 @@
     </div>
       
     <div class="section">
+        <adress>
         <h2>REFEREES</h2>
         <p>Mr Juan Maciel</p>
         <p>Events Manager</p>
@@ -133,6 +135,7 @@
         <p>Ph: +555 111 999</p>
         <p>Fax: +555 111 998</p>
         <p>Email: juanmaciel@moemamktg.br</p>
+        </adress>
     </div>
 
 </body>
