--- a/artifact01/index.html
+++ b/artifact01/index.html
@@ -30,7 +30,7 @@
         <div class="sub-section">
             <strong>May 2006 – Current</strong>
             <p><i>University of Sao Paulo, Sao Paulo BRAZIL</i></p>
-            <a href=http://www.fe.usp.br>
+            <a href=http://www.fe.usp.br>href=http://www.fe.usp.br</a>
             <p>Masters in International Marketing</p>
             <p>Expected graduation: Oct 2007</p>
         </div>
