--- a/artifact01/index.html
+++ b/artifact01/index.html
@@ -124,7 +124,7 @@
     </div>
       
     <div class="section">
-        <adress>
+        <address>
         <h2>REFEREES</h2>
         <p>Mr Juan Maciel</p>
         <p>Events Manager</p>
@@ -135,7 +135,7 @@
         <p>Ph: +555 111 999</p>
         <p>Fax: +555 111 998</p>
         <p>Email: juanmaciel@moemamktg.br</p>
-        </adress>
+        </address>
     </div>
 
 </body>
