--- a/artifact01/recipes2.html
+++ b/artifact01/recipes2.html
@@ -9,7 +9,7 @@
 <h1>Recipes</h1>
 		<figure>
 			<a href="https://joyfoodsunshine.com/the-most-amazing-chocolate-chip-cookies/" target="_blank">
-			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict" target="_blank" alt="Chocolate Chip cookies" title="Individual Chocolate Chip Cookies" style="width: 400px; height: auto;" >
+			<img src="https://th.bing.com/th/id/R.9c4b429fa775e3a2186ffc5ba1f8b486?rik=ArGMDZTcy3%2fsTQ&pid=ImgRaw&r=0&adlt=strict" alt="Chocolate Chip cookies" title="Individual Chocolate Chip Cookies" style="width: 400px; height: auto;" >
 			</a>
 				<figcaption>
 					This recipe for individual chocolate chip cookies is so simple and so delectable!
