--- a/artifact01/index.html
+++ b/artifact01/index.html
@@ -30,7 +30,7 @@
         <div class="sub-section">
             <strong>May 2006 – Current</strong>
             <p><i>University of Sao Paulo, Sao Paulo BRAZIL</i></p>
-            <a href=http://www.fe.usp.br>href=http://www.fe.usp.br</a>
+            <a href=http://www.fe.usp.br target="_blank">href=http://www.fe.usp.br</a>
             <p>Masters in International Marketing</p>
             <p>Expected graduation: Oct 2007</p>
         </div>
@@ -51,7 +51,7 @@
         <div class="sub-section">
             <h3>Jan 2006 – Current</h3>
             <p><i>MOEMA MARKETING, Sao Paulo BRAZIL</i></p>
-            <p><a href="http://www.moemamkt.com.br">http://www.moemamkt.com.br</a></p>
+            <p><a href="http://www.moemamkt.com.br" target="_blank">http://www.moemamkt.com.br</a></p>
             <p>Marketing Trainee – Casual (weekends and holidays)</p>
             <p>Responsibilities and achievements:</p>
             <p>Developed marketing and promotional material for sporting events
@@ -67,7 +67,7 @@
         <div class="sub-section">
             <h3>Jun 2006 – Sep 2006</h3>
             <p>THE ART OF MARKETING, Sao Paulo BRAZIL</p>
-            <p><a href="http://www.artofmarketing.com">http://www.artofmarketing.com</a></p>
+            <p><a href="http://www.artofmarketing.com" target="_blank">http://www.artofmarketing.com</a></p>
             <p>Internship – 12 weeks full-time</p>
             <p>Responsibilities and achievements:</p>
             <ul>
