--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<head> 
+  <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="name-of-your-css-file.css">
+#footer {
+ border:solid 1px;
+ padding: 10px;
+ margin:10px;
+}
+
+
+#container {
+ margin-top:20%;
+ margin-left:10%;
+ margin-right:10%;
+ margin-bottom:5%;
+}
+
+
+<h1 id="title">Chessboard</h1>
+
+
+#title {
+ position:fixed;
+ top:0px;
+ left:0px; 
+ padding:10px;
+ margin:0px;
+ width:100%;
+ background-color:lightyellow;
+ text-align:center; 
+ z-index:10;
+}
+
+
+
+<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" rel="stylesheet" type="text/css"/>
+
+
+
+
+font-family: 'JustLettersMedium'; 
+ font-weight: normal; 
+ font-style: normal; 
+ font-size:36px;
+
+
+
+img {
+ margin-left: 5px;
+ margin-top:10px;
+ }
+
+
+
+body {
+ background-image:url("http://3.bp.blogspot.com/-aNRb0w9Uu2E/Uk0w1v9lXjI/AAAAAAAAHrM/RipxfZqlQQ4/s1600/Texture-Backgrounds-Wallpaper-HD.jpg");
+}
+
+  <meta name="description" content="PROG 109 - Chessboard" /> 
+  <meta charset="utf-8" /> 
+  <title>Chess HTML5-Template</title> 
+  <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/> 
+</head>
+<body> 
+  <h1 id="title">Chessboard</h1> 
+  <div id="container"> 
+    <div class="row"> <!-- Row 1 --> 
+      <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div> 
+      <div class="black"></div> 
+      <div class="white"></div> 
+      <div class="black"></div> 
+      <div class="white"></div>
+      <div class="black"></div> 
+      <div class="white"></div> 
+      <div class="black"></div> 
+    </div> 
+    <div class="clear"> </div>
+<div class="row"> <!-- Row 2 --> 
+  <div class="black"></div>
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+</div> 
+  <div class="clear"> </div> <div class="row"> <!-- Row 3 --> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div>
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+  </div>
+  <div class="clear"> </div>
+<div class="row"> <!-- Row 4 --> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+</div> 
+  <div class="clear">  </div>
+  <div class="row"> <!-- Row 5 --> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div>
+  </div> 
+  <div class="clear"> </div>
+<div class="row"> <!-- Row 6 --> 
+  <div class="black"></div>
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div>
+  <div class="black"></div>
+  <div class="white"></div> 
+</div> 
+  <div class="clear"> </div>
+  <div class="row"> <!-- Row 7 --> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+    <div class="white"></div> 
+    <div class="black"></div> 
+  </div> <div class="clear"> 
+  </div>
+<div class="row"> <!-- Row 8 --> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+  <div class="black"></div> 
+  <div class="white"></div> 
+</div> 
+</div> <!-- END OF CONTAINER -->
+<div class="clear"> </div> 
+  <div id="footer"><p><a href="https://validator.w3.org/nu/check?uri=referer" target="_blank">NU HTML Checker </a><br> <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
+  </div>
+ </body>
+</html>
 
