--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>Chess HTML5-Template</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/font/open-baskerville" type="text/css"/>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="Downloads/style.css">
 </head>
 <body>
 <h1 id="title">Chessboard</h1>
