--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="file:///Users/aideng/Downloads/style.css">
 </head>
 <body>
-<h1 id="title">Chessboard</h1>
+<h1 id="title">Chessbooard</h1>
 <div id="container">
 <div class="row"> <!-- Row 1 -->
 <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
