--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <title>Chess HTML5-Template</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/font/open-baskerville" type="text/css"/>
-<link rel="stylesheet" href="/aideng/Downloads/style.css">
+<link rel="stylesheet" href="aideng/Downloads/style.css">
 </head>
 <body>
-<h1 id="title">Chessbooard</h1>
+<h1 id="title">Chessboard</h1>
 <div id="container">
 <div class="row"> <!-- Row 1 -->
 <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
