--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <head>
+<style>
+.row {
+    position: relative;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.white {
+    border: 1px solid black;
+    width: 10%;
+    height: 60px;
+    background-color: white;
+    float: left;
+}
+
+.black {
+    border: 1px solid black;
+    width: 10%;
+    height: 60px;
+    background-color: #787878;
+    float: left;
+}
+
+#clear { /* Corrected the selector */
+    clear: both;
+}
+
+#footer {
+    border: solid 1px;
+    padding: 10px;
+    margin: 10px;
+}
+
+#container {
+    margin-top: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 5%;
+}
+
+#title {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding: 10px;
+    margin: 0px;
+    width: 100%;
+    background-color: lightyellow;
+    text-align: center;
+    z-index: 10;
+    font-family: 'open baskerville';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 36px;
+}
+
+img {
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+body {
+    background-image: url("https://images.photowall.com/products/60513/misty-forest-2.jpg?h=699&q=85");
+}
+</style>
 <meta name="description" content="PROG 109 - Chessboard" />
 <meta charset="utf-8" />
 <title>Chess HTML5-Template</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/font/open-baskerville" type="text/css"/>
-<link rel="stylesheet" href="Downloads/chessboard/style.css">
+
 </head>
 <body>
-<h1 id="title">Chessbooard</h1>
+<h1 id="title">Chessboard</h1>
 <div id="container">
 <div class="row"> <!-- Row 1 -->
 <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
@@ -32,7 +97,7 @@
 <div class="white"></div>
 </div>
 <div class="clear"> </div>
-<div class="row"> <!-- Row 3 -->
+<div class="row">
 <div class="white"></div>
 <div class="black"></div>
 <div class="white"></div>
