--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -14,7 +14,6 @@
         }
 
         #title {
-            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
@@ -27,9 +26,11 @@
         }
 
         #container {
-            margin: 20% 10% 5% 10%;
-        }
-
+    margin-top: 15%;
+    margin-left: 5%;
+    margin-right: 0%; /* Adjusted right margin */
+    margin-bottom: 0%;
+}
         .row {
             position: relative;
             margin-bottom: 5px;
@@ -50,10 +51,21 @@
             background-color: #787878;
         }
 
+       
         #footer {
-            border: 1px solid black;
-            padding: 10px;
-            margin: 10px;
+            background-color: lightyellow;
+            text-align: center;
+            padding: 1px;
+            margin: 0px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        #bin {
+            float: right;
         }
     </style>
 </head>
