--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -6,9 +6,11 @@
   <link href="https://fonts.google.com/specimen/Cedarville+Cursive?query=cursive" rel="stylesheet"/>
     <style>
         body {
-          background-image: url("https://images.photowall.com/products/60513/misty-forest-2.jpg?h=699&q=85");
-           position: fixed;
-          margin-left:25%;
+          background-image: url("https://images.unsplash.com/photo-1501898047706-55903296cd09?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D");
+          background-size: cover; ground */
+
+          position: fixed;
+          margin-left:20%;
           margin-right:20%;
           margin-top:20%;
         }
@@ -19,7 +21,7 @@
  padding:10px;
  margin:0px;
  width:100%;
- background-color:lightgreen;
+ background-color: maroon;
  text-align:center; 
  z-index:10;
  font-family: 'Cedarville Cursive', Cursive;; 
@@ -52,7 +54,7 @@
             color: white;
         }
  #footer {
-    background-color: palegreen;
+    background-color: maroon;
     text-align: center;
     padding: 1px;
     margin: 0px;
