--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -7,12 +7,10 @@
     <style>
         body {
           background-image: url("https://images.unsplash.com/photo-1501898047706-55903296cd09?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D");
-          background-size: cover; ground */
-
-          position: fixed;
-          margin-left:20%;
+          background-size: cover;
+          margin-left:36%;
           margin-right:20%;
-          margin-top:20%;
+          margin-top:10%;
         }
       h1 {
  position:fixed;
