--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.google.com/specimen/Cedarville+Cursive?query=cursive" rel="stylesheet"/>
+  <link href="https://fontlibrary.org/en/font/kaligrafica-kaligraf" rel="stylesheet"/>
     <style>
         body {
           background-image: url("https://images.unsplash.com/photo-1501898047706-55903296cd09?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D");
@@ -22,10 +22,11 @@
  background-color: maroon;
  text-align:center; 
  z-index:10;
- font-family: 'Cedarville Cursive', Cursive;; 
+ font-family: 'Kaligrafica', Cursive; 
  font-weight: bold; 
  font-style: normal; 
- font-size:39px;       
+ font-size:39px;
+ color: white
 }
         .chess-board {
             display: grid;
