--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -34,24 +34,22 @@
             grid-template-rows: repeat(8, 50px);
         }
 
-        .chess-square {
-            width: 50px;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            font-weight: bold;
-        }
 
-        .white {
-            background-color: white;
-        }
+       .white{
+border: 1px solid black;
+width: 100%;
+height: 60px;
+background-color:white;
+float:left;
+}
 
-        .black {
-            background-color: #787878;
-            color: white;
-        }
+.black{
+border: 1px solid black;
+width: 100%;
+height: 60px;
+background-color:#787878;
+float:left;
+}
  #footer {
     background-color: maroon;
     text-align: center;
@@ -69,70 +67,70 @@
   <h1>Chessboard</h1>
     <div class="chess-board">
  
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div> 
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div> 
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
-        <div class="chess-square black"></div>
-        <div class="chess-square white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div> 
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div> 
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
     </div>
    <div id="footer">
         <p>
