--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -36,19 +36,28 @@
 
 
        .white{
-border: 1px solid black;
-width: 100%;
-height: 60px;
-background-color:white;
-float:left;
-}
+     border: 1px solid black;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            float: left;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 40px;
+        }
 
 .black{
 border: 1px solid black;
 width: 100%;
-height: 60px;
+height: 100%;
 background-color:#787878;
 float:left;
+  display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 40px;
+            
 }
  #footer {
     background-color: maroon;
@@ -67,38 +76,22 @@ float:left;
   <h1>Chessboard</h1>
     <div class="chess-board">
  
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div> 
+        <div class="white">♜</div>
+        <div class="black">♞</div>
+        <div class="white">♝</div>
+        <div class="black">♛</div>
+        <div class="white">♜</div>
+        <div class="black">♝</div>
+        <div class="white">♞</div>
+        <div class="black">♜</div>
+        <div class="black">♟︎</div>
+        <div class="white">♟︎</div>
+        <div class="black">♟︎</div>
+        <div class="white">♟︎</div>
+        <div class="black">♟︎</div>
+        <div class="white">♟︎</div>
+        <div class="black">♟︎</div>
+        <div class="white">♟︎</div>
         <div class="white"></div>
         <div class="black"></div>
         <div class="white"></div>
@@ -130,7 +123,23 @@ float:left;
         <div class="black"></div>
         <div class="white"></div>
         <div class="black"></div>
-        <div class="white"></div>
+        <div class="white"></div> 
+        <div class="white">♙</div>
+        <div class="black">♙</div>
+        <div class="white">♙</div>
+        <div class="black">♙</div>
+        <div class="white">♙</div>
+        <div class="black">♙</div>
+        <div class="white">♙</div>
+        <div class="black">♙</div>
+        <div class="black">♖</div>
+        <div class="white">♘</div>
+        <div class="black">♗</div>
+        <div class="white">♕</div>
+        <div class="black">♖</div>
+        <div class="white">♗</div>
+        <div class="black">♘</div>
+        <div class="white">♖</div>
     </div>
    <div id="footer">
         <p>
