--- a/M03 Assignment/index.html
+++ b/M03 Assignment/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/aidengandhi/Intro-to-WebD/main/M03%20Assignment/coolstyle.css">
+  <link rel="Stylesheet" href="style/coolstyle.css" type="text/css">
   <title>M02 Assignment</title>
 </head>
 <body>
