--- a/M03 Assignment/index.html
+++ b/M03 Assignment/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="Stylesheet" href="style/coolstyle2.css" type="text/css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dancing" type="text/css"/>
 		<title>Understanding CSS - Thinking Inside the Box</title>
 	</head>
 	<body>
