--- a/M04/index.html
+++ b/M04/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/supercoolcss.css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/chomsky" type="text/css"/>
 <title>Liquid Layout</title>
 	</head>
 	<body>
