--- a/M04/index.html
+++ b/M04/index.html
@@ -23,13 +23,13 @@
 			<div id="feature">
 				<p>Feature</p>
 			</div>
-			<div class="column1">
+			<div class="article column1">
 				<p>Column One</p>
 			</div>
-			<div class="column2">
+			<div class=" article column2">
 				<p>Column Two</p>
 			</div>
-			<div class="column3">
+			<div class=" article column3">
 				<p>Column Three</p>
 			</div>
 		</div>
