--- a/M04/index.html
+++ b/M04/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1>Logo</h1>
+			<h1 id="my heading">Logo</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="">Home</a></li>
