--- a/M04/index.html
+++ b/M04/index.html
@@ -3,7 +3,78 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/supercoolcss.css">
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/grotesque-bourgeoisie" type="text/css"/>
+<link rel="stylesheet" media="screen" href="* {
+    color:  #39FF14;
+    text-align: center;
+}
+
+#myheading {
+    font-family: 'GrotesqueBourgeoisieRegular';
+   font-weight: normal;
+   font-style: normal;
+}
+
+body {
+    background-image: url("https://img.freepik.com/free-vector/flat-design-flower-field-background_52683-126453.jpg");
+     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#content {
+    overflow: auto;
+}
+
+#nav,
+#footer {
+    margin: 1%;
+    background-color: #f71b85; 
+    padding: 0.5em 0;
+}
+
+#feature,
+.article {
+    height: 10em;
+    margin-bottom: 1em;
+    background-color: #efefef;
+}
+
+#feature {
+    background-color: #1bf7da;
+    background-image: url("https://static.vecteezy.com/system/resources/previews/024/400/487/original/rose-with-peony-flower-bouquet-clip-art-element-transparent-background-free-png.png");
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+.column1,
+.column2,
+.column3 {
+    width: 31.3%;
+    float: left;
+    margin: 1%;
+}
+
+.column1 {
+    background-color: #da1bf7; 
+}
+
+.column2 {
+    background-color: #a61bf7; 
+}
+
+.column3 {
+    width: 31.3%;
+    float: left;
+    margin: 1%;
+    margin-right: 0%;
+    background-color: #5d1bf7;
+}
+
+li {
+    display: inline;
+    padding: 0.5em;
+}" type="text/css"/>
 <title>Liquid Layout</title>
 	</head>
 	<body>
