--- a/M04/index.html
+++ b/M04/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/supercoolcss.css">
-<link rel="stylesheet" media="screen" href="* {
+<link rel="stylesheet" media="screen" href="https://fonts.google.com/specimen/Permanent+Marker/about?classification=Handwriting"
     color:  #39FF14;
     text-align: center;
 }
