--- a/M04/index.html
+++ b/M04/index.html
@@ -3,12 +3,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/supercoolcss.css">
-<link rel="stylesheet" media="screen" href="https://fonts.google.com/specimen/Permanent+Marker/about?classification=Handwriting" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/grotesque-bourgeoisie" type="text/css"/>
 <title>Liquid Layout</title>
 	</head>
 	<body>
 		<div id="header">
-			<h1 id="myheading">Logo</h1>
+			<h1 style="font-family:"GrotesqueBourgeoisieRegular">Logo</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="">Home</a></li>
