--- a/M04/index.html
+++ b/M04/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1 style="font-family:"GrotesqueBourgeoisieRegular">Logo</h1>
+			<h1>Logo</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="">Home</a></li>
