--- a/M04/index.html
+++ b/M04/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/grotesque-bourgeoisie" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/grotesque-bourgeoisie" type="text/css">
 <link rel="stylesheet" type="text/css" href="style/supercoolcss.css">
 <title>Liquid Layout</title>
 	</head>
