--- a/M06/index.html
+++ b/M06/index.html
@@ -40,7 +40,7 @@
   <div id="upRight"></div>
   <div id="downLeft"></div>
   <div id="downRight"></div>
-<script src="javascript/jss.js"></script>
+<script src=""></script>
 </body>
 </html>
  
