--- a/M06/index.html
+++ b/M06/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="Week 6 - BC - Rhombus">
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Aiden Gandhi</title>
 </head>
 <body>
   <label>What is the size of Rhombus?</label><br>
@@ -11,23 +11,23 @@
   
   <label>Choose color for Even position</label><br>
   <select id="colorEven">
-    <option value="#0000FF">Blue</option>
-    <option value="#FF0000">Red</option>
-    <option value="#FF9900">Orange</option>
+    <option value="#39FF14">Neon Green</option>
+    <option value="##FF00FF">Magenta</option>
+    <option value="#FF0099">Pink</option>
   </select><br>
 
   <label>Choose color for Odd position</label><br>
   <select id="colorOdd">
-    <option value="#FF0099">Pink</option>
-    <option value="#33FF00">Green</option>
-    <option value="#660099">Purple</option>
+    <option value="#FFFF33">Yellow</option>
+    <option value="#FF0000">Red</option>
+    <option value="#000000">black</option>
   </select><br>
 
   <label>Choose symbol for Rhombus</label>
   <select id="symbol">
-    <option value="*">*</option>
-    <option value="$">$</option>
-    <option value="@">@</option>
+    <option value="^">^</option>
+    <option value="+">+</option>
+    <option value="#">#</option>
   </select><br>
 
   <button onclick="createRhombus(
