--- a/M06/index.html
+++ b/M06/index.html
@@ -12,7 +12,7 @@
   <label>Choose color for Even position</label><br>
   <select id="colorEven">
     <option value="#39FF14">Neon Green</option>
-    <option value="##FF00FF">Magenta</option>
+    <option value="#FF00FF">Magenta</option>
     <option value="#FF0099">Pink</option>
   </select><br>
 
