--- a/M05/index.html
+++ b/M05/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Bullseye! Tutoring</title>
-    <link rel="stylesheet" href="css/c04.css" />
+    <link rel="stylesheet" href="style4/style12.css" />
   </head>
   <body>
     <section id="page2">
@@ -10,6 +10,6 @@
       <img src="images/teacher.png" id="teacher2" alt="" />
       <section id="blackboard"></section>
     </section>
-    <script src="js/example.js"></script>
+    <script src="java4/java12.js"></script>
   </body>
 </html>
