--- a/M05/index.html
+++ b/M05/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bullseye! Tutoring</title>
-    <link rel="stylesheet" href="style4/style12.css" />
-  </head>
-  <body>
-    <section id="page2">
-      <h1>Bullseye</h1>
-      <img src="images/teacher.png" id="teacher2" alt="" />
-      <section id="blackboard"></section>
+<html lang="en">
+
+<head>
+  <title>Bullseye</title>
+  <link rel="stylesheet" href="style4/style12.css" />
+</head>
+
+<body>
+  <section id="page2">
+    <h1>Bullseye</h1>
+    <img src="" id="teacher2" alt="" />
+    <section id="userInputForm">
+      <label for="userInput">Enter a number from 0 to 10:</label>
+      <input type="text" id="userInput" />
+      <button id="submitBtn" onclick="showMultiplicationTable()">Submit</button>
     </section>
-    <script src="java4/java12.js"></script>
-  </body>
+    <section id="blackboard"></section>
+  </section>
+  <script src="java4/java12.js"></script>
+ 
+</body>
 </html>
