--- a/M05/index.html
+++ b/M05/index.html
@@ -9,7 +9,7 @@
 <body>
   <section id="page2">
     <h1>Bullseye</h1>
-    <img src="" id="teacher2" alt="" />
+    <img src="style4/teacher.png" id="teacher2" alt="" />
     <section id="userInputForm">
       <label for="userInput">Enter a number from 0 to 10:</label>
       <input type="text" id="userInput" />
