--- a/a5/index.html
+++ b/a5/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="tt/index.css">
+  <title>Image Slideshow</title>
+</head>
+<body>
+  <div class="slideshow-container">
+    <div class="slide">
+      <img class="slide-img" src="https://www.tehaleh.com/media/8070156/mt-rainier-paradise-1.png?format=jpeg" alt="Image 1">
+      <div class="slide-description">Description for Image 1</div>
+    </div>
+    <div class="slide">
+      <img class="slide-img" src="https://res.cloudinary.com/simpleview/image/upload/v1500918014/clients/vancouverusa/fc37810f_6e34_4aeb_81ad_c25b4b4fd5cf_352b94ef-d326-4a6d-9e6f-9772d684f965.jpg" alt="Image 2">
+      <div class="slide-description">Description for Image 2</div>
+    </div>
+    <div class="slide">
+      <img class="slide-img" src="https://bellingham.objects.liquidweb.services/photos/350-chain-lakes-trail-mt-baker-whatcom-county-1200x800.jpg" alt="Image 3">
+      <div class="slide-description">Description for Image 3</div>
+    </div>
+    <div class="slide">
+      <img class="slide-img" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Mount_Adams_3503s.JPG" alt="Image 4">
+      <div class="slide-description">Description for Image 4</div>
+    </div>
+    <div class="slide">
+      <img class="slide-img" src="https://media.istockphoto.com/id/178835306/photo/bainbridge-island-mount-olympus-snow-mountain-olympic-national-park-washington.jpg?s=612x612&w=0&k=20&c=23sSncUTXut6GLlkclnhYSx72MOtiVNi27dGkHyUXyI=" alt="Image 5">
+      <div class="slide-description">Description for Image 5</div>
+    </div>
+  </div>
+  
+  <div class="controls">
+    <button onclick="prevSlide()">Previous</button>
+    <button onclick="nextSlide()">Next</button>
+  </div>
+
+  <script src="ts/index.js"></script>
+</body>
+</html>
 
