--- a/a5/index.html
+++ b/a5/index.html
@@ -10,23 +10,25 @@
   <div class="slideshow-container">
     <div class="slide">
       <img class="slide-img" src="https://www.tehaleh.com/media/8070156/mt-rainier-paradise-1.png?format=jpeg" alt="Image 1">
-      <div class="slide-description">Description for Image 1</div>
+      <div class="slide-description">
+  Mount Rainier is an iconic stratovolcano and the highest mountain in the state of Washington, USA. Standing at 14,410 feet (4,392 meters), it is renowned for its picturesque glaciers, diverse ecosystems, and commanding presence within Mount Rainier National Park.
+</div>
     </div>
     <div class="slide">
       <img class="slide-img" src="https://res.cloudinary.com/simpleview/image/upload/v1500918014/clients/vancouverusa/fc37810f_6e34_4aeb_81ad_c25b4b4fd5cf_352b94ef-d326-4a6d-9e6f-9772d684f965.jpg" alt="Image 2">
-      <div class="slide-description">Description for Image 2</div>
+      <div class="slide-description">Mount St. Helens is an active stratovolcano located in the state of Washington, USA. Known for its dramatic eruption in 1980, the mountain's landscape underwent significant changes, including the collapse of its summit and the creation of a horseshoe-shaped crater, leaving a lasting impact on the surrounding environment.</div>
     </div>
     <div class="slide">
       <img class="slide-img" src="https://bellingham.objects.liquidweb.services/photos/350-chain-lakes-trail-mt-baker-whatcom-county-1200x800.jpg" alt="Image 3">
-      <div class="slide-description">Description for Image 3</div>
+      <div class="slide-description">Mount Baker, a prominent stratovolcano in the North Cascades of Washington, USA, stands as one of the highest peaks in the state at 10,781 feet (3,286 meters). Known for its stunning glaciers and pristine wilderness surroundings, Mount Baker is a significant part of the Pacific Northwest's volcanic landscape.</div>
     </div>
     <div class="slide">
       <img class="slide-img" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Mount_Adams_3503s.JPG" alt="Image 4">
-      <div class="slide-description">Description for Image 4</div>
+      <div class="slide-description">Mount Adams, a massive stratovolcano in Washington, USA, is the state's second-highest peak, reaching an elevation of 12,281 feet (3,743 meters). Renowned for its symmetrical cone and extensive glaciers, Mount Adams is a prominent feature in the southern Cascade Range, contributing to the region's volcanic diversity and scenic beauty.</div>
     </div>
     <div class="slide">
       <img class="slide-img" src="https://media.istockphoto.com/id/178835306/photo/bainbridge-island-mount-olympus-snow-mountain-olympic-national-park-washington.jpg?s=612x612&w=0&k=20&c=23sSncUTXut6GLlkclnhYSx72MOtiVNi27dGkHyUXyI=" alt="Image 5">
-      <div class="slide-description">Description for Image 5</div>
+      <div class="slide-description">Mount Olympus, situated in the Olympic National Park of Washington, USA, is known for its stunning alpine scenery and diverse ecosystems. Rising to an elevation of 7,980 feet (2,432 meters), Mount Olympus is the highest peak in the Olympic Mountains, offering a striking backdrop to the lush rainforests and rugged coastline of the Pacific Northwest.</div>
     </div>
   </div>
   
