--- a/a4/index.html
+++ b/a4/index.html
@@ -36,14 +36,16 @@
         <label for="state">State:</label>
         <select id="state" name="state">
             <option value="">Select State</option>
-            <!-- Add options for all 50 states + Washington DC -->
+            <label for="state">State:</label>
+<select id="state" name="state">
+    <option value="">Select State</option>
         </select><br>
 
         <label for="country">Country:</label>
         <select id="country" name="country">
             <option value="">Select Country</option>
             <option value="USA">United States</option>
-            <!-- Add options for other countries if needed -->
+    
         </select><br>
 
         <label for="zipCode">Zip Code:</label>
