--- a/M04/index.html
+++ b/M04/index.html
@@ -18,6 +18,9 @@
 					<li><a href="">Services</a></li>
 					<li><a href="">About</a></li>
 					<li><a href="https://aidengandhi.github.io/Intro-to-WebD/contactus/index.html">Contact</a></li>
+					<li><a href="">Validation</li>
+					<li><a href="">Validation</li>
+					<li><a href="">Validation</li>
 				</ul>
 			</div>
 		</div>
