--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Simple Template #1 from simpletemplates.org" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Simple Template #1 - simpletemplates.org</title>
 </head>
 <body>
@@ -30,23 +30,25 @@
 </div>
 
 <div id="content">
-<h2>Simple Template #1 from simpletemplates.org</h2>
-<p>
-This is a fast loading and search engine friendly template. No images are used for a design - pure html/css template. Code is easy to read for quick and easy editing to suit your needs for a simple website that your visitors will find friendly to use. 
-</p>
+<h2>Contact Us</h2>
+<form id="contactForm" onsubmit="submitForm(event)">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required><br>
 
-<img src="pic3.jpg" alt="Pic 3" />
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br>
 
-<div class="cleft">
-<img src="pic1.jpg" alt="Pic 1" />
+    <label for="subject">Subject:</label>
+    <input type="text" id="subject" name="subject" required><br>
+
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message" rows="4" cols="50" required></textarea><br>
+
+    <input type="submit" value="Submit">
+</form>
+<div id="thankYou" style="display: none;">
+    Thank you for your message!
 </div>
-
-<div class="cright">
-<img src="pic2.jpg" alt="Pic 2" />
-</div>
-
-<div class="clear"> </div>
-
 </div>
 
 <div id="menu">
@@ -101,40 +103,24 @@ Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 </div>
 
 
-<div class="clear"> </div>
+<div class="clear"></div>
 
 </div>
 
 </div>
-
-<script>
+ <script>
     function loadContent(page) {
-        // You can fetch content from a server or define content here
-        // For demonstration purposes, we'll just show a message based on the page name
-        var content = '';
-        switch (page) {
-            case 'home':
-                content = 'Welcome to the Home page';
-                break;
-            case 'about':
-                content = 'Learn more about us on the About Us page';
-                break;
-            case 'services':
-                content = 'Explore our services on the What We Do page';
-                break;
-            case 'team':
-                content = 'Meet our team on the The Team page';
-                break;
-            case 'contact':
-                content = 'Contact us on the Contact Us page';
-                break;
-            default:
-                content = 'Page content not found';
-        }
-        document.getElementById('content').innerHTML = '<h2>' + page.toUpperCase() + '</h2><p>' + content + '</p>';
+        // Implement code to load content dynamically here
+    }
+
+    function submitForm(event) {
+        event.preventDefault(); // Prevent the form from submitting normally
+
+        // Implement code to handle form submission here
+        document.getElementById('contactForm').style.display = 'none'; // Hide the form
+        document.getElementById('thankYou').style.display = 'block'; // Show the thank you message
     }
 </script>
 
 </body>
 </html>
-
