--- a/midterm/index.html
+++ b/midterm/index.html
@@ -92,9 +92,15 @@ Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
 
 </div>
 
+<div id="thankYou" style="display: none;">
+    Thank you for your message!
+</div>
+
 <script>
     function loadContent(page) {
         // Implement code to load content dynamically here
+        // For demonstration purposes, let's just show the page name
+        alert("Loading " + page + " page...");
     }
 
     function submitForm(event) {
