--- a/midterm/pages/contact.html
+++ b/midterm/pages/contact.html
@@ -60,7 +60,7 @@
         <form
           class="contact__form"
           onsubmit="submitForm(event)"
-          action="/pages/thankyou-page.html"
+          action="pages/thankyoupage.html"
           method="get"
           name="myContact">
           <input
