--- a/midterm/pages/about.html
+++ b/midterm/pages/about.html
@@ -1,12 +1,14 @@
+
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>Aiden Coding Project</title>
-    <script src="js/style.js" defer></script>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <div id="wrap">
@@ -17,37 +19,37 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
-            <a href="pages/coursework.html" onclick="loadContent('coursework')"
+            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
               >Coursework</a
             >
           </li>
           <li>
-            <a href="pages/artifacts.html" onclick="loadContent('artifacts')"
+            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
               >Artifacts</a
             >
           </li>
           <li>
-            <a href="pages/module.html" onclick="loadContent('module')"
+            <a href="/pages/module.html" onclick="loadContent('module')"
               >Module</a
             >
           </li>
           <li>
-            <a href="pages/animation.html" onclick="loadContent('Animation')"
+            <a href="/pages/animation.html" onclick="loadContent('Animation')"
               >Animation</a
             >
           </li>
           <li>
-            <a href="pages/creative.html" onclick="loadContent('creative')"
+            <a href="/pages/creative.html" onclick="loadContent('creative')"
               >Creative</a
             >
           </li>
           <li>
-            <a href="pages/contact.html" onclick="loadContent('contact')"
+            <a href="/pages/contact.html" onclick="loadContent('contact')"
               >Contact</a
             >
           </li>
@@ -60,17 +62,15 @@
           <div class="about__description">
             <h3>Some Facts About Me</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              alias, tempora modi incidunt fugit voluptatibus!
+              My name is Aiden Gandhi and im a Junior at Issaquah High School, I am currentyl enrolled in running start. I participate in sports at my school incudling cross cointry, swim, and track where I do polevauting.
             </p>
             <h3>Academic and Professional Goals</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              alias, tempora modi incidunt fugit voluptatibus!
+              My short term academic goals are to just get through this year without failing, and in the long run go to a 4 year university where I can get a degree in mechanical engineering.
             </p>
           </div>
           <figure class="about__img--wrapper">
-            <img src="assets/Lebron.avif" alt="" class="about__img" />
+            <img src="https://raw.githubusercontent.com/aidengandhi/final-project/main/assets/IMG_0733.jpeg" />
           </figure>
         </div>
       </div>
